[tool.poetry]
name = "github-hosts"
version = "0.1.0"
description = ""
authors = ["huihuidehui"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
loguru = "^0.7.2"
ping3 = "^4.0.4"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
